Add new experiences, skills, projects and update cv

--- a/index.html
+++ b/index.html
@@ -141,6 +141,18 @@
                     <div class="col-5"> </div>
                     <div class="col-6">
                         <div class="exp-box">
+                            <h3>Bachelor Project</h3>
+                            <p class="uni-txt">Skatteetaten</p>
+                            <p class="exp-date">Jan 2025 - May 2025</p>
+                            <p>Collaboration with the Norwegian Tax Administration (Skatteetaten) for the bachelor project. TBU</p>
+                        </div>
+                        <div class="exp-box">
+                            <h3>Project  Assistent in Networking and Cloud Computing</h3>
+                            <p class="uni-txt">Oslo Metropolitian University</p>
+                            <p class="exp-date">Jan 2025 - Present</p>
+                            <p>Develop a network simulator webapplication. TBU</p>
+                        </div>
+                        <div class="exp-box">
                             <h3>Teacher  Assistent in Systems Development</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
                             <p class="exp-date">Aug 2024 - Nov 2024</p>
@@ -155,7 +167,7 @@
                         <div class="exp-box">
                             <h3>Student Assistent in Orakeltjenesten</h3>
                             <p class="uni-txt">Oslo Metropolitian University</p>
-                            <p class="exp-date">Jan 2024 - Present</p>
+                            <p class="exp-date">Jan 2024 - Des 2024</p>
                             <p>Orakeltjenesten is a support service provided by the Department of IT, where second- and third-year students from our bachelor's programs are hired as student assistants each semester.<br> Their primary role is to support and guide first-year students throughout their initial year of study. This includes providing assistance and guidance to technology students during practice sessions, mainly focusing on first-year students but also extending help to second- and third-year students as needed.</p>
                         </div>
                         <div class="exp-box">
@@ -181,8 +193,14 @@
                         <div class="exp-box">
                             <h3>Communication Chair</h3>
                             <p class="uni-txt">Women in Aviation International (WAI), Scandinavia Chapter</p>
-                            <p class="exp-date">Jun 202 - Present</p>
+                            <p class="exp-date">Jun 2024 - Present</p>
                             <p>Women in Aviation International is a non-profit organization dedicated to supporting and advancing women across all aviation career fields. Established in the USA in 1990 and formally incorporated in 1994, the Scandinavia Chapter began in 2019 and was restructured in 2020. <br>As Communication Chair, my role involves managing and enhancing the chapter’s communication strategies.</p>
+                        </div>
+                        <div class="exp-box">
+                            <h3>Member of the Electronics Department</h3>
+                            <p class="uni-txt">Portal Space</p>
+                            <p class="exp-date">Oct 2024 - Present</p>
+                            <p>Responsible for designing, assembling, and testing custom circuit boards, as well as programming embedded systems in C/C++. <br><br> Tasks include developing hardware-software interfaces, data acquisition, and control systems to support rocket operations.</p>
                         </div>
                     </div>
                 </div>
@@ -211,6 +229,13 @@
                         <div class="bar"> 
                             <div class="python-bar"> </div>
                             <div class="percentage">45%</div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>C/C++</p>
+                        <div class="bar"> 
+                            <div class="c-bar"> </div>
+                            <div class="percentage">10%</div>
                         </div>
                     </div>
                     <div class="skill-bar">
@@ -252,6 +277,13 @@
                         <p>Flask</p>
                         <div class="bar"> 
                             <div class="flask-bar"> </div>
+                            <div class="percentage">20%</div>
+                        </div>
+                    </div>
+                    <div class="skill-bar">
+                        <p>.NET</p>
+                        <div class="bar"> 
+                            <div class="net-bar"> </div>
                             <div class="percentage">20%</div>
                         </div>
                     </div>
@@ -311,7 +343,7 @@
                             <div class="project-row-1">
                                 <img  class="project-img" src="Images/web6.png">
                                 <h3>Calculator</h3>
-                                The project is a calculator application developed using Flask as the web framework. It incorporates Python for backend calculations, HTML for frontend structure, CSS for styling, and JavaScript for interactive features. Users can perform basic mathematical operations such as addition, subtraction, multiplication, division, and modulo. The calculator provides a user-friendly interface where numbers can be input via button clicks, and calculations can be executed instantly with the click of a button.<br><br> The page may take some time to load due to server resources used for hosting.                            </div>
+                                The project is a calculator application developed using Flask as the web framework. It incorporates Python for backend calculations, HTML for frontend structure, CSS for styling, and JavaScript for interactive features. <br><br>Users can perform basic mathematical operations such as addition, subtraction, multiplication, division, and modulo.<br><br> The calculator provides a user-friendly interface where numbers can be input via button clicks, and calculations can be executed instantly with the click of a button.<br><br> The page may take some time to load due to server resources used for hosting. </div>
                             <div class="project-row-2">
                                 <a href="https://calculatorapp-3ufs.onrender.com"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/Calculator"><button>Github</button></a>
@@ -319,13 +351,15 @@
                         </div>
                         <div class="project-box">
                             <div class="project-row-1">
-                                <img  class="project-img" src="Images/web1.png">
-                                <h3>Basketball Scoreboard</h3>
-                                This project is a dynamic basketball scoreboard that allows users to display scores in real-time. It was created using HTML, CSS, and JavaScript. Just a simple little project where I experimented how to use Javascript.
-                            </div>
+                                <img  class="project-img" src="Images/web7.png">
+                                <h3>Web Application Exam - NissGram</h3>
+                                Our group developed a social media platform inspired by Instagram using .NET for the backend and two sub-applications for the frontend. The backend, built with ASP.NET Core, handled user management, posts, and database interactions.
+                                <br><br>The first sub-application was created with ASP.NET MVC, following a server-side rendering approach. The second sub-application used React, focusing on a dynamic, client-side experience.
+                                <br><br>The project demonstrated our ability to work with both traditional MVC architecture and modern frontend frameworks, earning us an A grade.
+                                </div>
                             <div class="project-row-2">
-                                <a href="projects/Basketball - Scoreboard/basketball_Scoreboard.html"><button>Take a look!</button></a>
-                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/Basketball%20-%20Scoreboard"><button>Github</button></a>
+                                <!--<a href=""><button>Take a look!</button></a>-->
+                                <a href="https://github.com/Nicoldeep/Webapp-Exam-NissGram"><button>Github</button></a>
                             </div>
                         </div>
                     </div>
@@ -334,7 +368,7 @@
                             <div class="project-row-1">
                                 <img  class="project-img" src="Images/web4.png">
                                 <h3>Cinema Ticket Reservation</h3>
-                                As part of a mandatory assignment in web programming, this comprehensive project utilizes HTML, Bootstrap, JavaScript, and Spring Boot for both front-end and back-end development. The application provides an online platform for users to reserve movie tickets. Please note that due to the project's deployment constraints, the backend features  (Java, JPA, etc) are currently inactive. Nonetheless, the inclusion of Spring Boot reflects the full-stack capabilities demonstrated in this assignment.
+                                As part of a mandatory assignment in web programming, this comprehensive project utilizes HTML, Bootstrap, JavaScript, and Spring Boot for both front-end and back-end development.<br><br> The application provides an online platform for users to reserve movie tickets. Please note that due to the project's deployment constraints, the backend features  (Java, JPA, etc) are currently inactive.<br><br> Nonetheless, the inclusion of Spring Boot reflects the full-stack capabilities demonstrated in this assignment.
                             </div>
                             <div class="project-row-2">
                                 <a href="projects/KinoBestilling/src/main/resources/static/index.html"><button>Take a look!</button></a>
@@ -358,11 +392,36 @@
                             <div class="project-row-1">
                                 <img  class="project-img" src="Images/web3.png">
                                 <h3>Web Development Exam</h3>
-                                Collaboratively created using HTML, CSS, and JavaScript, this project was part of a group exam for the Web Development course. Achieving a B grade, the project showcases proficiency in web development skills. The use of various technologies demonstrates a comprehensive understanding of front-end development, resulting in a well-executed and functional web application.
+                                Collaboratively created using HTML, CSS, and JavaScript, this project was part of a group exam for the Web Development course. Achieving a B grade, the project showcases proficiency in web development skills.<br><br> The use of various technologies demonstrates a comprehensive understanding of front-end development, resulting in a well-executed and functional web application.
                             </div>
                             <div class="project-row-2">
                                 <a href="projects/Exam-Web-Final-2022/Web-prosjekt/index.html"><button>Take a look!</button></a>
                                 <a href="https://github.com/Selmakrgzz/DATA1200-Webutvikling-og-inkluderende-design/tree/main/Exam-Web-Final-2022/Web-prosjekt"><button>Github</button></a>
+                            </div>
+                        </div>
+                        <div class="project-box">
+                            <div class="project-row-1">
+                                <img  class="project-img" src="Images/web1.png">
+                                <h3>Basketball Scoreboard</h3>
+                                This project is a dynamic basketball scoreboard that allows users to display scores in real-time. It was created using HTML, CSS, and JavaScript. Just a simple little project where I experimented how to use Javascript.
+                            </div>
+                            <div class="project-row-2">
+                                <a href="projects/Basketball - Scoreboard/basketball_Scoreboard.html"><button>Take a look!</button></a>
+                                <a href="https://github.com/Selmakrgzz/DATA1700---Webprogramming/tree/main/Prosjekter/Basketball%20-%20Scoreboard"><button>Github</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-md-5">
+                        <div class="project-box">
+                            <div class="project-row-1">
+                                <img  class="project-img" src="Images/web8.jpg">
+                                <h3>Custom Devboard</h3>
+                                This project is a development board we assembled during the introductory course at Portal Space for the Electronics Department. 
+                                <br><br>The board includes a microcontroller, a push button, LED's as well as basic components like a voltage regulator and capacitors to ensure stable operation. 
+                                <br><br>We wrote simple code that makes the LED react to the button press, which gave us hands-on experience with microcontroller programming, basic circuit design, and soldering.
+                                </div>
+                            <div class="project-row-2">
+                                <a href="https://github.com/Selmakrgzz/AVR/tree/main/Devboard"><button>Github</button></a>
                             </div>
                         </div>
                         <div class="project-box" style="visibility: hidden;">
